--- a/install_scripts/erpnext-apps-master.json
+++ b/install_scripts/erpnext-apps-master.json
@@ -1,6 +1,6 @@
 [
 	{
-		"url":"https://github.com/frappe/erpnext",
+		"url":"https://github.com/grupozeety/erpnext.git",
 		"name":"erpnext",
 		"branch": "master"
 	}
